# thesauros

./: .clang-format  .clang-tidy  .cpp-cleaner  CMakeLists.txt  Makefile  ReadMe.md  cleanup.py  meson.build  meson_options.txt  subprojects.txt  test.cpp
include/thesauros/: algorithms.hpp  charconv.hpp  concepts.hpp  containers.hpp  execution.hpp  filesystem.hpp  format.hpp  functional.hpp  io.hpp  iterator.hpp  macropolis.hpp  math.hpp  memory.hpp  meta.hpp  numerics.hpp  optimization.hpp  quantity.hpp  random.hpp  ranges.hpp  resources.hpp  static-ranges.hpp  string.hpp  test.hpp  thesauros.hpp  types.hpp  utility.hpp
include/thesauros/algorithms/: execution.hpp  ranges.hpp  sort-indices.hpp  static-ranges.hpp  swap-or-equal.hpp  transform-inclusive-scan.hpp
include/thesauros/algorithms/execution/: transform-inclusive-scan.hpp
include/thesauros/algorithms/ranges/: for-each-multidim.hpp  for-each-tile.hpp  multidim-for-each.hpp  sort.hpp
include/thesauros/algorithms/static-ranges/: index-to-position.hpp  position-to-index.hpp
include/thesauros/charconv/: numeric-string.hpp  parse-integer.hpp  string-convert.hpp  string-escape.hpp  unicode.hpp
include/thesauros/concepts/: type-traits.hpp
include/thesauros/containers/: array.hpp  bitset.hpp  blocked-dynamic-array.hpp  chunked-dynamic-array.hpp  dynamic-bitset.hpp  dynamic-buffer.hpp  fixed-bitset.hpp  flat-map.hpp  flat-set.hpp  index-marker.hpp  multi-bit-integers.hpp  multi-byte-integers.hpp  nested-dynamic-array.hpp  set-algorithms.hpp  static-bitset.hpp  strongly-ordered-map.hpp  strongly-ordered-set.hpp
include/thesauros/containers/array/: construction.hpp  dynamic.hpp  fixed-alloc.hpp  fixed.hpp  growth-policy.hpp  initialization-policy.hpp  limited.hpp  typed-chunk.hpp
include/thesauros/containers/bitset/: dynamic.hpp  (+3 more)
include/thesauros/execution/: concurrency.hpp  execution-policy.hpp  executor.hpp  mutex-io.hpp  system.hpp
include/thesauros/filesystem/: tempfile.hpp
include/thesauros/format/: bitsets.hpp  color.hpp  cpu-info.hpp  debug.hpp  delimiter.hpp  execution.hpp  fmtlib.hpp  format.hpp  formatter.hpp  json.hpp  macropolis.hpp  manip.hpp  manipulation.hpp  multi-size.hpp  quantity.hpp  ranges.hpp  settings.hpp  simple-formatter.hpp  static-capacity-string.hpp  static-ranges.hpp  static-string.hpp  string-escape.hpp  style.hpp  value-optional.hpp
include/thesauros/functional/: binary.hpp  no-op.hpp
include/thesauros/io/: concepts.hpp  delimiter.hpp  file-reader.hpp  file-writer.hpp  file.hpp  json.hpp  manipulation.hpp  printers.hpp  settings.hpp  style.hpp
include/thesauros/iterator/: concepts.hpp  facades.hpp  provider-map.hpp  provider-reverse.hpp
include/thesauros/macropolis/: diagnostics.hpp  enum.hpp  flatten-type.hpp  helpers.hpp  inlining.hpp  members.hpp  platform.hpp  serial-value.hpp  type.hpp  void-macros.hpp  warnings.hpp
include/thesauros/math/: arithmetic.hpp  bit.hpp  compile-time.hpp  division.hpp  division.md  divmod.hpp  factorization.hpp  fast.hpp  finite.hpp  float-fraction.hpp  integer-cast.hpp  integer-tessellation.hpp  is-close.hpp  overflow.hpp  safe-integer.hpp
include/thesauros/memory/: byte-read.hpp  huge-pages-allocator.hpp  thp-allocator.hpp
include/thesauros/meta/: static-value.hpp
include/thesauros/numerics/: divmod.hpp
include/thesauros/quantity/: convert.hpp  io.hpp  quantity.hpp
include/thesauros/random/: lcg.hpp  randomize-range.hpp
include/thesauros/ranges/: cartesian-product.hpp  cartesian-product.md  concepts.hpp  enumerate.hpp  exposition.hpp  iota.hpp  reduce.hpp  reversed.hpp  transform.hpp  value.hpp  zip.hpp
include/thesauros/resources/: cpu-info.hpp  prefetch.hpp  resource-usage.hpp
include/thesauros/static-ranges/: definitions.hpp  generators.hpp  piping.hpp  ranges.hpp  sinks.hpp  views.hpp
include/thesauros/string/: character-tools.hpp  static-capacity-string.hpp  static-string.hpp
include/thesauros/test/: test.hpp
include/thesauros/types/: fixed-size-integer.hpp  literals.hpp  numeric-info.hpp  primitives.hpp  signedness.hpp  type-name.hpp  type-sequence.hpp  type-tag.hpp  type-transformations.hpp  value-tag-literal.hpp  value-tag.hpp  void-storage.hpp
include/thesauros/utility/: arrow-proxy.hpp  as-expected.hpp  byte-integer.hpp  byte-read.hpp  check-variant.hpp  combine-types.hpp  empty.hpp  fancy-visit.hpp  fixed-size-integer.hpp  index-position-wrapper.hpp  index-segmentation.hpp  info-result.hpp  init-required.hpp  inlining.hpp  integer-cast.hpp  integral-value.hpp  kind-convert.hpp  literals.hpp  move-detector.hpp  multi-bit-reference.hpp  multi-size.hpp  no-default.hpp  no-op.hpp  numeric-info.hpp  numeric-string.hpp  optional.hpp  parse-integer.hpp  primitives.hpp  resource-usage.hpp  safe-cast.hpp  static-capacity-string.hpp  static-map.hpp  static-ranges.hpp  static-string.hpp  static-value.hpp  string-convert.hpp  string-escape.hpp  swap-or-equal.hpp  time-guard.hpp  tuple.hpp  (+14 more)
src/resources/: cpu-info-macos.cpp
subprojects/: .gitignore  ReadMe.md  boost-preprocessor.wrap  expected.wrap  fmt.wrap  options.wrap  unordered_dense.wrap  update_tlaxcaltin.py
subprojects/options/: meson.build
subprojects/packagefiles/boost-preprocessor/: meson.build
subprojects/packagefiles/expected/: meson.build
subprojects/packagefiles/fmt/: meson.build
subprojects/packagefiles/pcg-cpp/: meson.build
subprojects/packagefiles/unordered_dense/: meson.build
test/: arrays.cpp  blocked-dynamic-array.cpp  chunked-dynamic-array.cpp  concepts.cpp  concurrency.cpp  divisor.cpp  dynamic-bitset.cpp  empty.cpp  execution.cpp  factorization.cpp  fancy-visit.cpp  fixed-bitset.cpp  flat.cpp  format.cpp  index-position-wrapper.cpp  index-segmenter.cpp  json.cpp  macropolis.cpp  math.cpp  meson.build  missing-tests.txt  multi-byte-integers.cpp  primitives.cpp  quantity.cpp  randomize-range.cpp  ranges.cpp  static-bitset.cpp  static-map.cpp  static-ranges.cpp  static-string.cpp  std-extensions.cpp  strongly-ordered.cpp  swap-or-equal.cpp  tempfile.cpp  tessellation.cpp  tiling.cpp  tools.hpp  tuples.cpp  type-seq.cpp  types.cpp  (+2 more)
(+94 files in other folders)
